--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Fd\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\ITMaker\\AppData\\Roaming\\NetBeans\\21\\build.properties
